# agent-smith

./: .gitignore  AGENTS.md  CODEBASE_REFACTORING_PLAN.md  R2_STORAGE_MIGRATION_PLAN.md  README.md  SKILL-REFACTORING-REVIEW.md  SKILLS.md  TEST-COVERAGE-ANALYSIS.md  UNIFIED_SCRIPT_MIGRATION.md  docker-compose.yml  pyproject.toml
api/: main.py
backend/: SKILLS.md  TESTING.md  pyproject.toml
backend/api/: __init__.py  config.py  main.py  prompts.py  requirements.txt
backend/api/alembic/: README  env.py
backend/api/config/: prompts.yaml
backend/api/db/: __init__.py  base.py  dependencies.py  session.py
backend/api/executors/: skill_executor.py
backend/api/mcp/: fs_tools.py  notes_tools.py  tools.py
backend/docker/: Dockerfile
backend/scripts/: add_skill_dependencies.py  generate_skills_md.py  run_tests.py  run_tests_docker.sh  setup_test_db.sh  sync_workspace_to_r2.py  validate-all.sh
backend/tests/: conftest.py
docker/: Dockerfile
docs/: ARCHITECTURE.md  MIGRATION.md  SUPABASE_MIGRATION_PLAN.md  TEST-COVERAGE-ANALYSIS.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css  app.html
scripts/: migrate_to_workspace.sh  validate-all.sh
skills/audio-transcribe/: SKILL.md
skills/drive-read/: SKILL.md
skills/drive-search/: SKILL.md
skills/local-search/: SKILL.md
skills/local-write/: SKILL.md
skills/subdomain-discover/: SKILL.md
skills/web-crawler-policy/: SKILL.md
skills/web-save/: SKILL.md
skills/youtube-download/: SKILL.md
skills/youtube-transcribe/: SKILL.md
tests/: test_mcp_client.py
(+230 files in other folders)
