[project]
name = "agent-smith"
version = "0.1.0"
description = "Lightweight development environment for Agent Skills"
authors = [
    {name = "Sean Betts", email = "seanbetts@icloud.com"}
]
requires-python = ">=3.11"

# Runtime dependencies for skills with bundled scripts
dependencies = [
    # PDF processing (pdf skill)
    "pypdf>=4.0.0",
    # PowerPoint processing (pptx skill)
    "python-pptx>=0.6.23",
    # Image manipulation (used by pptx skill)
    "Pillow>=10.0.0",
    # Safe XML parsing (used by docx/pptx ooxml scripts)
    "defusedxml>=0.7.1",
    # HTTP library (for custom scripts)
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    # Agent Skills validation tool (dev only)
    "skills-ref @ git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref",
]
